# ta-indicators

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
configuration/: base.yaml  production.yaml
configuration/static/: index.html  openapi.json
src/: configuration.rs  crypto_client.rs  lib.rs  main.rs  startup.rs
src/routes/: aroon_oscillator.rs  ema.rs  fibonacci_retracement.rs  health_check.rs  mod.rs  rsi.rs  simple_moving_average.rs  stochastic_oscillator.rs
tests/: health_check.rs
