[package]
name = "taindicators"
version = "0.1.0"
authors = ["Proioxis4 <lucadaniele444@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "taindicators"

[dependencies]
serde_json = "1.0"
actix-files = "0.6.2"
chrono = "0.4"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde-aux = "3"
secrecy = { version = "0.8", features = ["serde"] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde_derive = "1.0.145"
thiserror = "1.0.37"
[dev-dependencies]